[tool.poetry]
name = "edge-booking"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "edge_booking"}]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.8.3"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
